--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
 # Core dependencies
-pdfminer.six>=20221105
-pillow>=10.0.0
-markdown>=3.4.4
-pymupdf>=1.23.7
-requests>=2.31.0
+PyPDF2>=3.0.0
+pdf2image>=1.16.3
+Pillow>=10.0.0
+markdown>=3.4.0
 python-dotenv>=1.0.0
 
 # For AutoGen implementation
 pyautogen>=0.2.0
-openai>=1.1.0
+openai>=1.12.0
+
+# Development dependencies
+pytest>=7.0.0
+black>=23.0.0
+isort>=5.12.0
+flake8>=6.0.0
