--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,13 @@ pdf2image>=1.16.3
 Pillow>=10.0.0
 markdown>=3.4.0
 python-dotenv>=1.0.0
-
-# For AutoGen implementation
-pyautogen>=0.2.0
 openai>=1.12.0
+pyautogen>=0.8.0
+opencv-python>=4.8.0
+numpy>=1.24.0
 
 # Development dependencies
 pytest>=7.0.0
 black>=23.0.0
-isort>=5.12.0
+isort>=5.0.0
 flake8>=6.0.0
