added choice between Open vs Azur OpenAI as params

--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,22 @@
 # Choose your API provider: "openai" or "azure"
-API_PROVIDER=azure
+# This setting determines which API configuration will be used
+API_PROVIDER=openai
 
-# OpenAI Configuration (if using OpenAI)
+# ===== OpenAI Configuration =====
+# Required if API_PROVIDER=openai
 OPENAI_API_KEY=your-openai-key-here
 OPENAI_API_BASE=https://api.openai.com/v1
+OPENAI_MODEL=gpt-4-turbo-preview
 
-# Azure OpenAI Configuration (if using Azure)
+# ===== Azure OpenAI Configuration =====
+# Required if API_PROVIDER=azure
 AZURE_OPENAI_API_KEY=your-azure-key-here
 AZURE_OPENAI_ENDPOINT=https://your-service-name.openai.azure.com/
 AZURE_OPENAI_API_VERSION=2024-12-01-preview
 AZURE_OPENAI_MODEL=o1
 
-# Logging Configuration
+# ===== Common Settings =====
+# These settings apply to both providers
 LOG_LEVEL=INFO
 
 # AutoGen Configuration
