--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,13 @@
 # This setting determines which API configuration will be used
 API_PROVIDER=openai
 
-# ===== OpenAI Configuration =====
+# ===== OpenAI Configuration (Sample values provided here. Please customize)=====
 # Required if API_PROVIDER=openai
 OPENAI_API_KEY=your-openai-key-here
 OPENAI_API_BASE=https://api.openai.com/v1
 OPENAI_MODEL=gpt-4-turbo-preview
 
-# ===== Azure OpenAI Configuration =====
+# ===== Azure OpenAI Configuration (Sample values provided here. Please customize)=====
 # Required if API_PROVIDER=azure
 AZURE_OPENAI_API_KEY=your-azure-key-here
 AZURE_OPENAI_ENDPOINT=https://your-service-name.openai.azure.com/
